data/derived/comb/progs/unify/prog1687.ml.out
Characters 86-90:
  | h::tl -> iter (h curr) tl in
                     ^^^^
Error: This expression has type ('a -> 'b) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'b) list
